($Id: ChangeLog,v 1.51 2001-06-20 18:33:03 rufustfirefly Exp $)

2001-06-20  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in: check for linux/quota.h before enabling
	QUOTACTL_WRAPPER (Joe Clarke) 

	* acconfig.h, configure.in, include/atalk/util.h,
	libatalk/util/module.c: removed NO_DLFCN_H in favor of
	ifndef HAVE_DLFCN_H (Jeff)

	* configure.in, etc/afpd/*.{c,h}, include/atalk/util.h:
	major autoconf fixes for afpd, nicer commenting, etc (Jeff)

2001-06-19  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/afpd/file.c, etc/afpd/parse_mtab.c, etc/afpd/parse_mtab.h,
	etc/atalkd/route.h, etc/atalkd/rtmp.c, etc/papd/headers.c,
	etc/papd/magics.c, libatalk/asp/asp_tickle.c: patch for
	fixed DID calculation in etc/afpd/file.c, FreeBSD errors and
	other miscellany (Joe Clarke) 

	* minor patches and fixes to the aforementioned files, warning
	fixes with GCC, etc (Jeff)

2001-06-18  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, etc/uams/Makefile.am,
	etc/uams/uams_krb4/Makefile.am: patch #433952 from Sebastian
	Rittau to move UAM authentication to use libtool

	* configure.in, bin/afppasswd/Makefile.am, config/Makefile.am,
	contrib/shell_utils/Makefile.am, distrib/initscripts/Makefile.am,
	etc/afpd/Makefile.am, etc/afpd/nls/Makefile.am,
	etc/atalkd/Makefile.am, etc/papd/Makefile.am,
	man/man5/Makefile.am, man/man8/Makefile.am: patch #433906
	to move to pkgconfdir for package config files (Sebastian Rittau)

	* configure.in: fixed error that caused --with-did not to function
	properly

2001-06-13  Sam Noble <ns@shadow.org>
	* etc/papd/{printcap,ppd,lp,file,comment}.h:
	added #include <sys/cdefs.h> to these headers so that __P gets
	properly defined on platforms like TRU64

2001-06-11  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, include/atalk/adouble.h, libatalk/compat/flock.c:
	patch #431859 to avoid ucbinclude on Solaris, with flock support,
	thanks to Russ Allbery (rra@users.sourceforge.net)

	* acconfig.h, configure.in, libatalk/util/server_child.c,