@@ -1,5 +1,5 @@
 /*
- * $Id: uams_dhx_passwd.c,v 1.8 2001-05-22 19:13:36 rufustfirefly Exp $
+ * $Id: uams_dhx_passwd.c,v 1.9 2001-06-25 15:18:01 rufustfirefly Exp $
  *
  * Copyright (c) 1990,1993 Regents of The University of Michigan.
  * Copyright (c) 1999 Adrian Sun (asun@u.washington.edu) 
@@ -57,12 +57,10 @@ static struct passwd *dhxpwd;
 static u_int8_t randbuf[16];
 
 #ifdef TRU64
-#include <sys/types.h>
-#include <sys/security.h>
-#include <prot.h>
 #include <sia.h>
+#include <siad.h>
 
-static int c2security = 0;
+static char *clientname;
 #endif /* TRU64 */
 
 /* dhx passwd */
@@ -92,6 +90,12 @@ static int passwd_login(void *obj, struct passwd **uam_pwd,
 
     if (uam_afpserver_option(obj, UAM_OPTION_USERNAME, (void *) &name, &i) < 0)
       return AFPERR_PARAM;
+
+#ifdef TRU64
+    if( uam_afpserver_option( obj, UAM_OPTION_CLIENTNAME,
+                              (void *) &clientname, NULL ) < 0 )
+        return AFPERR_PARAM;
+#endif /* TRU64 */
 
     len = (unsigned char) *ibuf++;
     if ( len > i ) {
@@ -261,22 +265,21 @@ static int passwd_logincont(void *obj, struct passwd **uam_pwd,
 
     rbuf[PASSWDLEN] = '\0';
 #ifdef TRU64
-    if ( c2security == 1 ) {
-        struct pr_passwd *pr = getprpwnam( dhxpwd->pw_name );
-	if ( pr == NULL )
-	    return AFPERR_NOTAUTH;
-	if ( strcmp( dispcrypt( rbuf, pr->ufld.fd_encrypt,
-            pr->ufld.fd_oldcrypt ), pr->ufld.fd_encrypt ) == 0 ) {
-            *uam_pwd = dhxpwd;
-            return AFP_OK;
-	}
-    } else {
-        p = crypt( rbuf, dhxpwd->pw_passwd );
-        memset(rbuf, 0, PASSWDLEN);
-        if ( strcmp( p, dhxpwd->pw_passwd ) == 0 ) {
-            *uam_pwd = dhxpwd;
-            return AFP_OK;
-        }
+    {
+        int ac;
+        char **av;
+        char hostname[256];
+
+        uam_afp_getcmdline( &ac, &av );
+        sprintf( hostname, "%s@%s", dhxpwd->pw_name, clientname );
+
+        if( sia_validate_user( NULL, ac, av, hostname, dhxpwd->pw_name,
+                               NULL, FALSE, NULL, rbuf ) != SIASUCCESS )
+            return AFPERR_NOTAUTH;
+
+        memset( rbuf, 0, PASSWDLEN );
+        *uam_pwd = dhxpwd;
+        return AFP_OK;
     }
 #else /* TRU64 */
     p = crypt( rbuf, dhxpwd->pw_passwd );
@@ -293,37 +296,6 @@ static int passwd_logincont(void *obj, struct passwd **uam_pwd,
 
 static int uam_setup(const char *path)
 {
-#ifdef TRU64
-    FILE *f;
-    char buf[256];
-    char siad[] = "siad_ses_init=";
-
-    if ( access( SIAIGOODFILE, F_OK ) == -1 ) {
-        syslog( LOG_ERR, "dhx uam_setup: %s does not exist",
-            SIAIGOODFILE);
-        return -1;
-    }
-
-    if ( ( f = fopen(MATRIX_CONF, "r" ) ) == NULL ) {
-        syslog( LOG_ERR, "dhx uam_setup: %s is unreadable",
-            MATRIX_CONF );
-        return -1;
-    }
-
-    while ( fgets( buf, sizeof(buf), f ) != NULL ) {
-        if ( strncmp( buf, siad, sizeof(siad) - 1 ) == 0 ) {
-            if ( strstr( buf, "OSFC2" ) != NULL )
-                c2security = 1;
-            break;
-        }
-    }
-
-    fclose(f);
-
-    syslog( LOG_INFO, "dhx uam_setup: security level %s",
-        c2security == 0 ? "BSD" : "OSFC2" );
-#endif /* TRU64 */
-
   if (uam_register(UAM_SERVER_LOGIN, path, "DHCAST128",
 		   passwd_login, passwd_logincont, NULL) < 0)
     return -1;
